Ajuste do textarea

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -38,7 +38,7 @@ form textarea {
     color: #333;
     border: 1px solid #dcdce6;
     border-radius: 8px;
-    padding: 16 24px;
+    padding: 16px 24px;
     line-height: 24px;
 }
 
