--- a/frontend/src/pages/NewIncident/styles.css
+++ b/frontend/src/pages/NewIncident/styles.css
@@ -43,7 +43,7 @@
 
 }
 
-.new-incident-container .content form textarea,
-.new-incident-container .content form input {
+.new-incident-container .content form input,
+.new-incident-container .content form textarea {
     margin-top: 8px;
 }
